# flow-tool

./: README.md
buildScript/: .gitignore  build.sh
bundleScript/: .gitignore  bundle-zip_tar.sh  bundle.sh
devSetup/: .gitignore  clean.sh  setup_rhel.sh  setup_ubuntu.sh
src/common/: applog.cpp  helper.cpp  sysfswrapper.cpp
src/common/include/: applog.h  definitions.h  helper.h  logger.h  pluginInterface.h  sysfswrapper.h
src/framework/: CMakeLists.txt
src/framework/buildScript/: build.sh
src/framework/src/: main.cpp  pluginManager.cpp
src/framework/src/include/: pluginManager.h
src/plugins/analysis/: CMakeLists.txt  manifest.json  versionconfig.h.in
src/plugins/analysis/buildScript/: build.sh
src/plugins/analysis/config/: golden_snapshot.json
src/plugins/analysis/schema/: analysis.manifest.schema_v1.json
src/plugins/analysis/src/: analysis.cpp  pkgrules.cpp  plugin.cpp
src/plugins/analysis/src/include/: analysis.h  pkgrules.h  plugin.h
src/plugins/common/: algorithms.cpp  graph.cpp  manifestDataStructure.cpp  statusInfo.cpp  sysinfo.cpp  validator.cpp
src/plugins/common/include/: graph.h  manifestDataStructure.h  statusInfo.h  sysinfo.h  validator.h
src/plugins/deploy/: CMakeLists.txt  README.md
src/plugins/deploy/buildScript/: build.sh
src/plugins/deploy/schema/: deploy.manifest.schema_v1.json
src/plugins/deploy/src/: apihandlers.cpp  commandreference.cpp  deploy.cpp  plugin.cpp
src/plugins/deploy/src/include/: actions.h  apihandlers.h  commandreference.h  deploy.h  deploy_definitions.h  plugin.h
src/plugins/deploy/test/buildtime_tests/: CmakeLists.txt  test_graph.cpp
src/plugins/discovery/: CMakeLists.txt  versionconfig.h.in
src/plugins/discovery/buildScript/: build.sh
src/plugins/discovery/schema/: plugin.discovery.collect.response.v1.schema  plugin.discovery.config.schema  plugin.discovery.info.response.v1.schema
src/plugins/discovery/src/: Config.cpp  apihandlers.cpp  discovery.cpp  metricsinfo.cpp  plugin.cpp
src/plugins/discovery/src/include/: Config.h  apihandlers.h  discovery.h  discovery_definitions.h  log.h  metricsBase.h  metricsinfo.h  plugin.h  softwareInfo.h  version.h
